--- a/notebook-new.ipynb
+++ b/notebook-new.ipynb
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -865,12 +865,13 @@
      "output_type": "stream",
      "text": [
       "Pojemność:  10000\n",
-      "Wielkość:  1\n",
-      "Element o numerze 0 to Item\n"
+      "Wielkość:  10000\n",
+      "Pierwszy element to Item\n"
      ]
     }
    ],
    "source": [
+    "# Z Pythona nie można określić rozmiaru RingBuffera -> hazelcast.yaml, hazelcast.xml\n",
     "rb = client.get_ringbuffer(\"ring-buffer\").blocking()\n",
     "\n",
     "print(\"Pojemność: \", rb.capacity())\n",
@@ -878,8 +879,8 @@
     "sequence = rb.add(\"Item\")\n",
     "print(\"Wielkość: \", rb.size())\n",
     "\n",
-    "item = rb.read_one(sequence)\n",
-    "print(\"Element o numerze {} to {}\".format(sequence, item))"
+    "first_item = rb.read_one(sequence)\n",
+    "print(\"Pierwszy element to {}\".format(first_item))"
    ]
   },
   {
