Update notebooks with comments

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -408,6 +408,10 @@
     }
    ],
    "source": [
+    "# Utworzenie klienta\n",
+    "# - cluster_name - nazwa Naszego klastra Hazelcast, do którego chcemy się podłączyć\n",
+    "# - cluster_members - lista IP instancji będących w klastrze\n",
+    "\n",
     "import hazelcast\n",
     "\n",
     "client = hazelcast.HazelcastClient(\n",
@@ -438,6 +442,8 @@
     }
    ],
    "source": [
+    "# TEST\n",
+    "\n",
     "imap = client.get_map(\"trades\").blocking()\n",
     "entry_set = imap.entry_set()\n",
     "first_key, _ = next(iter(entry_set))\n",
@@ -458,7 +464,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Wybranie mapy po stronie klastra\n",
+    "\n",
     "cities = client.get_map(\"cities\").blocking()\n",
+    "\n",
+    "# Stworzenie mapping, który jest potrzebny do wykonywania operacji na danych przechowywanych w Hazelcast.\n",
     "\n",
     "client.sql.execute(\n",
     "    \"\"\"\n",
@@ -471,6 +481,8 @@
     "\n",
     "    \"\"\"\n",
     ").result()\n",
+    "\n",
+    "# Wykonanie zapytania na klastrze\n",
     "\n",
     "client.sql.execute(\n",
     "    \"\"\"\n",
@@ -485,6 +497,8 @@
     "(8, 'Brazil', 'Rio de Janeiro')\n",
     "    \"\"\"\n",
     ").result()\n",
+    "\n",
+    "# Zapytanie do pobrania mapy\n",
     "\n",
     "result = client.sql.execute(\"SELECT * FROM cities\").result()\n"
    ]
@@ -510,6 +524,8 @@
     }
    ],
    "source": [
+    "# Wypisanie elementów znajdujących się aktualnie w mapie\n",
+    "\n",
     "for row in result:\n",
     "    print(row)"
    ]
@@ -572,7 +588,9 @@
     }
    ],
    "source": [
-    "#trades = client.get_map(\"coinbase_trades\").blocking()\n",
+    "# Przykład z użyciem danych Coinbase\n",
+    "\n",
+    "trades = client.get_map(\"coinbase_trades\").blocking()\n",
     "\n",
     "client.sql.execute(\"\"\"\n",
     "        CREATE OR REPLACE MAPPING trades (\n",
@@ -615,6 +633,8 @@
     }
    ],
    "source": [
+    "# Bardziej złożone zapytanie\n",
+    "\n",
     "result_trades = client.sql.execute(\n",
     "    \"\"\"  \n",
     "    SELECT  * \n",
@@ -640,6 +660,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Zapytanie obliczające średnią cenę w interwałach 10 minutowych\n",
+    "\n",
     "query =   \"\"\"\n",
     "    SELECT \n",
     "    CAST(FLOOR(time_unix / 600000) * 600000 AS BIGINT) AS time_bucket,\n",
@@ -676,6 +698,8 @@
     }
    ],
    "source": [
+    "# Wykres zmian cen\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "from datetime import datetime\n",
@@ -742,6 +766,8 @@
     }
    ],
    "source": [
+    "# Zapytanie do znalezienia transakcji o najwyższych cenach\n",
+    "\n",
     "query= \"\"\"\n",
     "    SELECT \n",
     "        time_unix AS transaction_time,\n",
@@ -801,6 +827,8 @@
     }
    ],
    "source": [
+    "# Zapytanie do obliczenia średniej ceny transakcji w zależności od godziny jej wykonania (wykres zawiera jedynie dane z jednej godziny, gdyż dłużej klaster nie był utrzymywany)\n",
+    "\n",
     "import pandas as pd\n",
     "from datetime import datetime\n",
     "\n",
@@ -870,6 +898,8 @@
     }
    ],
    "source": [
+    "# Zapytanie zliczające procentowy udział transakcji kupna/sprzedaży w ciągu ostatniej godziny\n",
+    "\n",
     "from collections import Counter\n",
     "\n",
     "from datetime import datetime\n",
@@ -933,6 +963,8 @@
     }
    ],
    "source": [
+    "# Wykorzystanie mapy z zagregowanymi danymi z Coinbase\n",
+    "\n",
     "client.sql.execute(\"\"\"\n",
     "CREATE OR REPLACE MAPPING aggregated_trades (\n",
     "    product_id VARCHAR,\n",
@@ -964,6 +996,7 @@
     }
    ],
    "source": [
+    "# \n",
     "\n",
     "query = '''\n",
     "SELECT \n",
@@ -995,7 +1028,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Cachowanie"
+    "### Cachowanie\n",
+    "\n",
+    "Hazelcast implementuje specyfikację JCache (JSR-107), co umożliwia:\n",
+    "- Przechowywanie obiektów w pamięci rozproszonej.\n",
+    "- Integrację z istniejącymi aplikacjami jako pamięć podręczna (cache).\n"
    ]
   },
   {
@@ -1013,6 +1050,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Konfigurowanie Cache na strukturze danych Hazelcast\n",
+    "\n",
     "config = Config()\n",
     "config.cluster_name = \"dev\"\n",
     "config.cluster_members = [\"127.0.0.1:5701\", \"127.0.0.1:5702\", \"127.0.0.1:5703\"]\n",
@@ -1113,6 +1152,8 @@
     }
    ],
    "source": [
+    "# Wykonywania zapytań po stronie klienta Hazelcast (nieoptymalne, ale możliwe)\n",
+    "\n",
     "people = client.get_map(\"people\").blocking()\n",
     "\n",
     "people.put_all(\n",
@@ -1173,7 +1214,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Map Listener"
+    "### Map Listener\n",
+    "\n",
+    "obsługa zdarzeń w czasie rzeczywistym"
    ]
   },
   {
@@ -1203,6 +1246,8 @@
     }
    ],
    "source": [
+    "# Dodanie Map Listenera do struktury danych, który umożliwia logowanie na kliencie operacji wykonywanych na strukturze\n",
+    "\n",
     "def entry_added(event):\n",
     "    print(\"Dodano pozycję o kluczu {} i wartości {}\".format(event.key, event.value))\n",
     "\n",
@@ -1254,7 +1299,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Subskrypcja do Topic"
+    "### Subskrypcja do Topic\n",
+    "\n",
+    "rozproszony system publikacji/subskrypcji (publish/subscribe)\n"
    ]
   },
   {
@@ -1381,6 +1428,8 @@
     }
    ],
    "source": [
+    "# Publish/Subscribe model na Hazelcaście (definiowanie Topica)\n",
+    "\n",
     "import hazelcast\n",
     "import time\n",
     "import logging\n",
